test/files/neg/macro-nontypeablebody/Macros_Test_2.scala
object Macros {
  def foo(x: Any) = macro Impls.foo2
}

object Test extends App {
  import Macros._
  foo(42)
}